--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,6 +8,7 @@ jobs:
       - run:
           command: |
             export CI_BRANCH=$CIRCLE_BRANCH
+            export PACKAGECLOUD_REPOSITORY=dokku/dokku
             make version
       - run: make ci-report
       - run: make build-docker-image
@@ -22,5 +23,5 @@ jobs:
       - run:
           command: |
             if [[ "$CIRCLE_BRANCH" == "release" ]]; then
-              make release-in-docker
+              make release-in-docker release-packagecloud-in-docker
             fi
