fix: recreate .env.docker when making a release

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,5 +38,6 @@ jobs:
       run: |
         if [[ "${GITHUB_REF#refs/heads/}" == "release" ]]; then
           export PACKAGECLOUD_REPOSITORY=dokku/dokku
-          make release-in-docker release-packagecloud-in-docker
+          rm .env.docker
+          make .env.docker release-in-docker release-packagecloud-in-docker
         fi
