--- a/Dockerfile.hub
+++ b/Dockerfile.hub
@@ -1,3 +1,3 @@
 FROM scratch
-COPY ./build/linux/bats-retry /bats-retry
-ENTRYPOINT ["/bats-retry"]
+COPY ./build/linux/netrc /netrc
+ENTRYPOINT ["/netrc"]
